# story-rail

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md
docs/superpowers/plans/: 2026-07-19-minimal-cli-engine.md  2026-07-19-provider-config.md
docs/superpowers/specs/: 2026-07-19-minimal-cli-engine-design.md  2026-07-19-provider-config-design.md
examples/rainy-night/: script.json
schemas/: script.schema.json
src/storyrail/: __init__.py  cli.py  config.py  engine.py  errors.py  loader.py  models.py  narrator.py
src/storyrail/providers/: __init__.py  anthropic.py  base.py  factory.py  mock.py  openai_compatible.py
templates/: script.json
tests/: test_cli.py  test_config.py  test_engine.py  test_loader.py  test_narrator.py  test_providers.py  test_sample_story.py
