[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "storyrail"
version = "0.1.0"
description = "A deterministic CLI story engine for controlled AI-assisted interactive fiction."
requires-python = ">=3.11"
dependencies = [
  "anthropic",
  "openai",
  "python-dotenv",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
